test/parserTest/fail/test8.ic
class BadConstructorCall extends OverallBadness {
	SomeClass mySomeClass;
	
	//calling a constructor with parameters is illegal in IC grammar
	void doThings () {
		this.mySomeClass = new mySomeClass("illegal parameter");
	}
	
}